fix: better diversity wording spacing

--- a/assets/amarena.scss
+++ b/assets/amarena.scss
@@ -150,7 +150,7 @@ a, a:hover {
   z-index: 4;
 }
 .diversity{
-  letter-spacing: 3px;
+  letter-spacing: 1px;
 }
 .moveme {
   animation-delay: 3s;
